# dash-slides

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  index.py  presentation.py  pyproject.toml  requirements.txt
custom_utilities/: custom_functions.py  custom_functions0.py
dash-slides/: app.py
dash-slides/custom_utilities/: custom_functions.py
dash-slides/slides/: template.py
data/: analytics_columns
example/: index.py  presentation.py
example/custom_utilities/: custom_functions.py
example/slides/: intro.py  template.py
slides/: content.py  graph.py  intro.py  last.py  picture.py  template.py
