[tool.poetry]
name = "dash-slides"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.8.1"
dash-bootstrap-components = "^1.3.1"
gunicorn = "^20.1.0"
gevent = "^22.10.2"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
